Fix chat overflow. Fix button colours

--- a/Components/Pages/Chat.razor.scss
+++ b/Components/Pages/Chat.razor.scss
@@ -2,20 +2,24 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    margin: 0;
+    /**/
+    overflow: hidden;
 
     ul {
         display: flex;
         flex-direction: column;
-        width: 100%;
         height: 100%;
         overflow-y: scroll;
         padding: 10px 10px 0;
         background-image: url("../img/messager-bg.png");
         background-size: contain;
         border-radius: 12px;
+        margin: 0;
 
         li {
             width: fit-content;
+            max-width: 90%;
             /*background-color: #808080;*/
             margin-bottom: 8px;
             padding: 6px;
@@ -50,6 +54,7 @@
 
         input {
             margin-bottom: 10px;
+            padding-right: 38px;
         }
 
         button {
@@ -61,6 +66,10 @@
             justify-content: center;
             align-items: center;
             background-color: transparent;
+
+            &:disabled {
+                opacity: 0.6;
+            }
         }
     }
 }
