--- a/wwwroot/css/app.scss
+++ b/wwwroot/css/app.scss
@@ -195,6 +195,17 @@ button {
     color: #fff;
 }
 
+.button-submit {
+    background-color: #0CB952;
+    color: #fff;
+}
+
+.button-cancel {
+    background-color: #b3b3b3;
+    color: #fff;
+}
+
+
 ul {
     list-style: none;
 }
